add tool, junit5 and scrapy